--- a/client /src/app/admin/admin.component.html
+++ b/client /src/app/admin/admin.component.html
@@ -1,44 +1,48 @@
 <!-- Used to open the Modal -->
 
 <div class="container text-center">
-        <h2>Welcome Admin</h2>
-        
-        <p><button class="btn" data-toggle="modal" data-target="#myModal">Add User</button></p>
-        <p><button type="button" class="btn btn-primary" (click)="showCalendar()">Mark Attendance</button>
-            <button type="button" class="btn btn-primary" (click)="showAttendance()">Show Attendance</button>
-        </p>
-        <div *ngIf="flag==1">
-                <input [(ngModel)]="userAttendance.date" type="date" name="date">
-                <input (click)="getDate()" type="submit">
-        </div>
-      </div>
+    <h2>Welcome Admin</h2>
 
-      <div class="container text-right">
-            <button type="button" class="btn btn-primary" (click)="logout()">Logout</button>
-        </div>
-  
+    <p><button class="btn" data-toggle="modal" data-target="#myModal">Add User</button></p>
+    <p><button type="button" class="btn btn-primary" (click)="showCalendar()">Mark Attendance</button>
+        <button type="button" class="btn btn-primary" (click)="showAttendance()">Show Attendance</button>
+    </p>
+    <div *ngIf="flag==1">
+        <input [(ngModel)]="userAttendance.date" type="date" name="date">
+        <input (click)="getDate()" type="submit">
+    </div>
+</div>
+
+<div class="container text-right">
+    <button type="button" class="btn btn-primary" (click)="logout()">Logout</button>
+</div>
+
 
 
 <div *ngIf="tableFlag==1">
-        <div class="container">            
-            <table class="table table-bordered">
-              <thead>
+    <div class="container">
+        <table class="table table-bordered">
+            <thead>
                 <tr>
-                  <th>Marked Attendance</th>
+
+                    <th>Name</th>
+                    <th>Marked Attendance</th>
                 </tr>
-              </thead>
-              
-              <tbody>
-                  <div *ngFor='let adminAttendance of savedAdminAttendance'>
-                <tr>
-                  <td>{{adminAttendance.date}}</td>
-                </tr>
-                </div>
-              </tbody>
-            </table>
-          </div>
-          </div>
+            </thead>
+
+            <tbody>
+               
+                    <tr *ngFor='let adminAttendance of savedAdminAttendance'>
+                        <td>{{adminAttendance.firstname}} {{adminAttendance.lastname}} </td>
+                        <td>{{adminAttendance.date}}</td>
+                    </tr>
+            </tbody>
+    
         
+        </table>
+    </div>
+</div>
+
 
 
 <!-- Modal -->
@@ -55,7 +59,8 @@
                 <form #userForm="ngForm" (ngSubmit)="onSubmit(userForm.value)" novalidate>
                     <div class="form-group">
                         <label> Firstname </label>
-                        <input type="text" class="form-control" [(ngModel)]="userInput.firstname" #nameRef="ngModel" required placeholder="Enter Firstname" name="firstname" ngModel>
+                        <input type="text" class="form-control" [(ngModel)]="userInput.firstname" #nameRef="ngModel" required placeholder="Enter Firstname"
+                            name="firstname" ngModel>
                         <div *ngIf="nameRef.errors && (nameRef.dirty||nameRef.touched)">
                             <div [hidden]="!nameRef.errors.required">
                                 Please enter Firstname
@@ -64,7 +69,8 @@
                     </div>
                     <div class="form-group">
                         <label> Lastname </label>
-                        <input type="text" class="form-control" #lastRef="ngModel"  [(ngModel)]="userInput.lastname"required placeholder="Enter Lastname" name="lasttname" ngModel>
+                        <input type="text" class="form-control" #lastRef="ngModel" [(ngModel)]="userInput.lastname" required placeholder="Enter Lastname"
+                            name="lasttname" ngModel>
                         <div *ngIf="lastRef.errors && (lastRef.dirty||lastRef.touched)">
                             <div [hidden]="!lastRef.errors.required">
                                 Please enter Lastname
@@ -73,8 +79,8 @@
                     </div>
                     <div class="form-group">
                         <label> Employee Id</label>
-                        <input type="number" class="form-control" #refEmployeeId="ngModel" [(ngModel)]="userInput.empId" pattern = "^[1-9][0-9]{3}$" required placeholder="Enter Employee Id"
-                            name="employeeId" ngModel>
+                        <input type="number" class="form-control" #refEmployeeId="ngModel" [(ngModel)]="userInput.empId" pattern="^[1-9][0-9]{3}$"
+                            required placeholder="Enter Employee Id" name="employeeId" ngModel>
                         <div *ngIf="refEmployeeId.errors && (refEmployeeId.dirty||refEmployeeId.touched)">
                             <div [hidden]="!refEmployeeId.errors.required">
                                 Please enter Employee Id
@@ -86,7 +92,8 @@
                     </div>
                     <div class="form-group">
                         <label> Password</label>
-                        <input type="password" class="form-control" minlength="6" #refPassword="ngModel"  [(ngModel)]="userInput.password" required placeholder="Enter Password" name="password" ngModel>
+                        <input type="password" class="form-control" minlength="6" #refPassword="ngModel" [(ngModel)]="userInput.password" required
+                            placeholder="Enter Password" name="password" ngModel>
                         <div *ngIf="refPassword.errors && (refPassword.dirty||refPassword.touched)">
                             <div [hidden]="!refPassword.errors.required">
                                 Please enter Password
@@ -96,11 +103,11 @@
                             </div>
                         </div>
                     </div>
-               
-                <button [disabled]="!userForm.form.valid" type="submit" (click)="signup()" class="btn btn-block">Add User
+
+                    <button [disabled]="!userForm.form.valid" type="submit" (click)="signup()" class="btn btn-block">Add User
                 <span class="glyphicon glyphicon-ok"></span>
               </button>
-            </form>
+                </form>
             </div>
             <div class="modal-footer">
                 <button type="submit" class="btn btn-danger btn-default pull-left" data-dismiss="modal">
